--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formkit/vue": "^1.0.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
