--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@formkit/vue": "^1.0.0",
+    "axios": "^1.5.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
